Update for BeeCP-3.3.3